--- a/build.gradle
+++ b/build.gradle
@@ -22,24 +22,15 @@ group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-
 archivesBaseName = "modid"
 
 minecraft {
-    version = "1.7.10-10.13.1.1210-new"
+    version = "1.7.10-10.13.0.1208"
     runDir = "eclipse"
 }
 
 dependencies {
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+    compile "codechicken:CodeChickenLib:1.7.10-1.1.1.95:dev"
+    compile "codechicken:ForgeMultipart:1.7.10-1.1.0.297:dev"
+    compile "codechicken:CodeChickenCore:1.7.10-1.0.2.13:dev"
+    compile "codechicken:NotEnoughItems:1.7.10-1.0.2.36:dev"
 }
 
 processResources
