Improved network code using Access Transformers to send tile clearing packets to all players watching a chunk and only those players..

--- a/src/main/resources/META-INF/funkylocomotion_at.cfg
+++ b/src/main/resources/META-INF/funkylocomotion_at.cfg
@@ -2,3 +2,7 @@
 #Chunk
 public net.minecraft.world.chunk.Chunk func_76615_h(III)V
 public net.minecraft.world.chunk.Chunk func_76595_e(II)V
+
+#Chunk Watcher
+public net.minecraft.server.management.PlayerManager$PlayerInstance
+public net.minecraft.server.management.PlayerManager func_72690_a(IIZ)Lnet/minecraft/server/management/PlayerManager$PlayerInstance;
