--- a/src/main/resources/META-INF/funkylocomotion_at.cfg
+++ b/src/main/resources/META-INF/funkylocomotion_at.cfg
@@ -6,3 +6,8 @@ public net.minecraft.world.chunk.Chunk func_76595_e(II)V
 #Chunk Watcher
 public net.minecraft.server.management.PlayerManager$PlayerInstance
 public net.minecraft.server.management.PlayerManager func_72690_a(IIZ)Lnet/minecraft/server/management/PlayerManager$PlayerInstance;
+
+# Description packet data
+# Proper getters are SideOnly'd
+public net.minecraft.network.play.server.S35PacketUpdateTileEntity field_148860_e
+public net.minecraft.network.play.server.S33PacketUpdateSign field_149349_d
