Added a clear tessellator help method for recovering from crashes.

--- a/src/main/resources/META-INF/funkylocomotion_at.cfg
+++ b/src/main/resources/META-INF/funkylocomotion_at.cfg
@@ -11,3 +11,6 @@ public net.minecraft.server.management.PlayerManager func_72690_a(IIZ)Lnet/minec
 # Proper getters are SideOnly'd
 public net.minecraft.network.play.server.S35PacketUpdateTileEntity field_148860_e
 public net.minecraft.network.play.server.S33PacketUpdateSign field_149349_d
+
+# Tessellator isDrawing
+public net.minecraft.client.renderer.Tessellator field_78415_z
