Better handling of ISBR misbehavior and crashes. This changes access transformers, so you will need to re-setupDecompWorkspace.

--- a/src/main/resources/META-INF/funkylocomotion_at.cfg
+++ b/src/main/resources/META-INF/funkylocomotion_at.cfg
@@ -14,3 +14,4 @@ public net.minecraft.network.play.server.S33PacketUpdateSign field_149349_d
 
 # Tessellator isDrawing
 public net.minecraft.client.renderer.Tessellator field_78415_z
+public net.minecraft.client.renderer.Tessellator field_147569_p
