--- a/src/main/resources/META-INF/funkylocomotion_at.cfg
+++ b/src/main/resources/META-INF/funkylocomotion_at.cfg
@@ -5,6 +5,7 @@ public net.minecraft.world.chunk.Chunk func_76595_e(II)V
 
 #Chunk Watcher
 public net.minecraft.server.management.PlayerManager$PlayerInstance
+public net.minecraft.server.management.PlayerManager$PlayerInstance *
 public net.minecraft.server.management.PlayerManager func_72690_a(IIZ)Lnet/minecraft/server/management/PlayerManager$PlayerInstance;
 
 # Description packet data
