Moving tiles are forcefully re-rendered when they are created (configurable).

--- a/src/main/resources/META-INF/funkylocomotion_at.cfg
+++ b/src/main/resources/META-INF/funkylocomotion_at.cfg
@@ -16,3 +16,10 @@ public net.minecraft.network.play.server.S33PacketUpdateSign field_149349_d
 # Tessellator isDrawing
 public net.minecraft.client.renderer.Tessellator field_78415_z
 public net.minecraft.client.renderer.Tessellator field_147569_p
+
+# RenderGlobal
+public net.minecraft.client.renderer.RenderGlobal field_72765_l
+public net.minecraft.client.renderer.RenderGlobal field_72766_m
+public net.minecraft.client.renderer.RenderGlobal field_72767_j
+public net.minecraft.client.renderer.RenderGlobal field_72764_o
+public net.minecraft.client.renderer.RenderGlobal field_72763_n
