--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ group= "com.rwtema.funkylocomotion" // http://maven.apache.org/guides/mini/guide
 archivesBaseName = "funky-locomotion-1.7.10"
 
 minecraft {
-    version = "1.7.10-10.13.2.1240"
+    version = "1.7.10-10.13.4.1492-1.7.10"
     runDir = "eclipse"
 }
 
@@ -34,10 +34,10 @@ repositories {
 }
 
 dependencies {
-    compile "codechicken:CodeChickenLib:1.7.10-1.1.1.106:dev"
-    compile "codechicken:CodeChickenCore:1.7.10-1.0.4.29:dev"
-    compile "codechicken:NotEnoughItems:1.7.10-1.0.3.72:dev"    
-    compile "codechicken:ForgeMultipart:1.7.10-1.1.0.314:dev"
+    compile "codechicken:ForgeMultipart:1.7.10-1.2.0.345:dev"
+    compile "codechicken:CodeChickenLib:1.7.10-1.1.3.136:dev"
+    compile "codechicken:CodeChickenCore:1.7.10-1.0.6.44:dev"
+    compile "codechicken:NotEnoughItems:1.7.10-1.0.4.107:dev"
 }
 
 processResources
