Ported to MC 1.11.2 (#105)
* Update mappings to stable_29 and fix compiler warnings

* Add MethodHandles and reflection for the private stuff

* Update gradle and wrapper

* Fix infinite NBT tag recursion in getUpdateTag(). Fixes #101.

* Fix the Pusher/Puller not dropping with correct metadata. Fixes #100.

* Disable unused ATs

* Fix the NBT recursion fix... Movement animation now works again.

* Fix pushers/pullers/etc getting stuck

* Fix onBlockActivated return values. Fixes missing sounds.

* Fix culling on moving tiles

* Fix a single player crash caused by the fix to pushers getting stuck

Basically, don't try to start movement from the client side TEs.

* Update to Minecraft 1.11.2

* Fix a crash in the Slider and Teleporter with getDamageDropped()

* Add a safe way of getting the TE inside getActualState()

It is only used in BlockSlider atm.

--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,14 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "0.0.3"
+version = "0.0.3-masafixes.5"
 group= "com.rwtema.funkylocomotion" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "funky-locomotion-1.10.2-alpha"
+archivesBaseName = "funky-locomotion-1.11.2-alpha"
 
 minecraft {
-    version = "1.10.2-12.18.2.2114"
+    version = "1.11.2-13.20.0.2230"
     runDir = "run"
-    mappings = "snapshot_20161029"
+    mappings = "snapshot_20170214"
    makeObfSourceJar = false
 }
 
@@ -31,7 +31,7 @@ minecraft {
 }
 
 dependencies {
-    deobfCompile "mezz.jei:jei_1.10.2:3.12.7.312"
+    deobfCompile "mezz.jei:jei_1.11.2:4.2.4.226"
 }
 
 
