--- a/src/main/resources/META-INF/funkylocomotion_at.cfg
+++ b/src/main/resources/META-INF/funkylocomotion_at.cfg
@@ -1,10 +1,10 @@
 #Main Forge Access Transformer configuration file
 #Chunk
-public net.minecraft.world.chunk.Chunk func_76615_h(III)V
-public net.minecraft.world.chunk.Chunk func_76595_e(II)V
-public net.minecraft.world.chunk.Chunk *
+#public net.minecraft.world.chunk.Chunk func_76615_h(III)V
+#public net.minecraft.world.chunk.Chunk func_76595_e(II)V
+#public net.minecraft.world.chunk.Chunk *
 
-public net.minecraft.server.management.PlayerChunkMapEntry *
+#public net.minecraft.server.management.PlayerChunkMapEntry *
 
 #Chunk Watcher
 #public net.minecraft.server.management.PlayerManager$PlayerInstance
@@ -30,62 +30,62 @@ public net.minecraft.server.management.PlayerChunkMapEntry *
 
 
 #GLStateManager
-public net.minecraft.client.renderer.GlStateManager *
-public net.minecraft.client.renderer.GlStateManager$AlphaState
-public net.minecraft.client.renderer.GlStateManager$BlendState
-public net.minecraft.client.renderer.GlStateManager$BooleanState
-public net.minecraft.client.renderer.GlStateManager$ClearState
-public net.minecraft.client.renderer.GlStateManager$Color
-public net.minecraft.client.renderer.GlStateManager$ColorLogicState
-public net.minecraft.client.renderer.GlStateManager$ColorMask
-public net.minecraft.client.renderer.GlStateManager$ColorMaterialState
-public net.minecraft.client.renderer.GlStateManager$CullState
-public net.minecraft.client.renderer.GlStateManager$DepthState
-public net.minecraft.client.renderer.GlStateManager$FogState
-public net.minecraft.client.renderer.GlStateManager$PolygonOffsetState
-public net.minecraft.client.renderer.GlStateManager$StencilFunc
-public net.minecraft.client.renderer.GlStateManager$StencilState
-public net.minecraft.client.renderer.GlStateManager$TexGenCoord
-public net.minecraft.client.renderer.GlStateManager$TexGenState
-public net.minecraft.client.renderer.GlStateManager$TextureState
+#public net.minecraft.client.renderer.GlStateManager *
+#public net.minecraft.client.renderer.GlStateManager$AlphaState
+#public net.minecraft.client.renderer.GlStateManager$BlendState
+#public net.minecraft.client.renderer.GlStateManager$BooleanState
+#public net.minecraft.client.renderer.GlStateManager$ClearState
+#public net.minecraft.client.renderer.GlStateManager$Color
+#public net.minecraft.client.renderer.GlStateManager$ColorLogicState
+#public net.minecraft.client.renderer.GlStateManager$ColorMask
+#public net.minecraft.client.renderer.GlStateManager$ColorMaterialState
+#public net.minecraft.client.renderer.GlStateManager$CullState
+#public net.minecraft.client.renderer.GlStateManager$DepthState
+#public net.minecraft.client.renderer.GlStateManager$FogState
+#public net.minecraft.client.renderer.GlStateManager$PolygonOffsetState
+#public net.minecraft.client.renderer.GlStateManager$StencilFunc
+#public net.minecraft.client.renderer.GlStateManager$StencilState
+#public net.minecraft.client.renderer.GlStateManager$TexGenCoord
+#public net.minecraft.client.renderer.GlStateManager$TexGenState
+#public net.minecraft.client.renderer.GlStateManager$TextureState
 
-public net.minecraft.client.renderer.GlStateManager$AlphaState *
-public net.minecraft.client.renderer.GlStateManager$BlendState *
-public net.minecraft.client.renderer.GlStateManager$BooleanState *
-public net.minecraft.client.renderer.GlStateManager$ClearState *
-public net.minecraft.client.renderer.GlStateManager$Color *
-public net.minecraft.client.renderer.GlStateManager$ColorLogicState *
-public net.minecraft.client.renderer.GlStateManager$ColorMask *
-public net.minecraft.client.renderer.GlStateManager$ColorMaterialState *
-public net.minecraft.client.renderer.GlStateManager$CullState * 
-public net.minecraft.client.renderer.GlStateManager$DepthState * 
-public net.minecraft.client.renderer.GlStateManager$FogState *
-public net.minecraft.client.renderer.GlStateManager$PolygonOffsetState *
-public net.minecraft.client.renderer.GlStateManager$StencilFunc *
-#public net.minecraft.client.renderer.GlStateManager$StenincilState *
-public net.minecraft.client.renderer.GlStateManager$TexGenCoord * 
-public net.minecraft.client.renderer.GlStateManager$TexGenState * 
-public net.minecraft.client.renderer.GlStateManager$TextureState *
+#public net.minecraft.client.renderer.GlStateManager$AlphaState *
+#public net.minecraft.client.renderer.GlStateManager$BlendState *
+#public net.minecraft.client.renderer.GlStateManager$BooleanState *
+#public net.minecraft.client.renderer.GlStateManager$ClearState *
+#public net.minecraft.client.renderer.GlStateManager$Color *
+#public net.minecraft.client.renderer.GlStateManager$ColorLogicState *
+#public net.minecraft.client.renderer.GlStateManager$ColorMask *
+#public net.minecraft.client.renderer.GlStateManager$ColorMaterialState *
+#public net.minecraft.client.renderer.GlStateManager$CullState * 
+#public net.minecraft.client.renderer.GlStateManager$DepthState * 
+#public net.minecraft.client.renderer.GlStateManager$FogState *
+#public net.minecraft.client.renderer.GlStateManager$PolygonOffsetState *
+#public net.minecraft.client.renderer.GlStateManager$StencilFunc *
+##public net.minecraft.client.renderer.GlStateManager$StenincilState *
+#public net.minecraft.client.renderer.GlStateManager$TexGenCoord * 
+#public net.minecraft.client.renderer.GlStateManager$TexGenState * 
+#public net.minecraft.client.renderer.GlStateManager$TextureState *
 
 
 
 
 #InventoryCrafting
-public net.minecraft.inventory.InventoryCrafting *
+#public net.minecraft.inventory.InventoryCrafting *
 
 #Minecraft
-public net.minecraft.client.Minecraft field_71467_ac
+#public net.minecraft.client.Minecraft field_71467_ac
 
 #EntityItem
-public net.minecraft.entity.item.EntityItem func_70289_a(Lnet/minecraft/entity/item/EntityItem;)Z
+#public net.minecraft.entity.item.EntityItem func_70289_a(Lnet/minecraft/entity/item/EntityItem;)Z
 
 
 #TextureAtlasSprite
-public net.minecraft.client.renderer.texture.TextureAtlasSprite.field_110982_k
-public net.minecraft.client.renderer.texture.TextureAtlasSprite.func_130099_d(I)V
-public net.minecraft.client.renderer.texture.TextureAtlasSprite.func_180599_n()V
-public net.minecraft.client.renderer.texture.TextureAtlasSprite.func_147962_a([[IIII)[[I
+#public net.minecraft.client.renderer.texture.TextureAtlasSprite.field_110982_k
+#public net.minecraft.client.renderer.texture.TextureAtlasSprite.func_130099_d(I)V
+#public net.minecraft.client.renderer.texture.TextureAtlasSprite.func_180599_n()V
+#public net.minecraft.client.renderer.texture.TextureAtlasSprite.func_147962_a([[IIII)[[I
 
 #rendering
-public net.minecraft.client.renderer.RenderItem func_175035_a(Lnet/minecraft/client/renderer/block/model/IBakedModel;I)V # renderModel
-public net.minecraft.client.renderer.RenderItem func_175036_a(Lnet/minecraft/client/renderer/block/model/IBakedModel;Lnet/minecraft/item/ItemStack;)V # renderModel
+#public net.minecraft.client.renderer.RenderItem func_175035_a(Lnet/minecraft/client/renderer/block/model/IBakedModel;I)V # renderModel
+#public net.minecraft.client.renderer.RenderItem func_175036_a(Lnet/minecraft/client/renderer/block/model/IBakedModel;Lnet/minecraft/item/ItemStack;)V # renderModel
