--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ archivesBaseName = "funky-locomotion-1.12.2"
 minecraft {
     version = "1.12.2-14.23.0.2529"
     runDir = "run"
-    mappings = "snapshot_20170629"
+    mappings = "snapshot_20171003"
    makeObfSourceJar = false
 }
 
@@ -24,6 +24,10 @@ repositories {
   maven {
     url "http://dvs1.progwml6.com/files/maven"
   }
+    maven {
+        name = "buildcraft"
+        url = "https://mod-buildcraft.com/maven"
+    }
 }
 
 minecraft {
@@ -32,6 +36,8 @@ minecraft {
 
 dependencies {
     deobfCompile "mezz.jei:jei_1.12.2:4.8.0.111"
+    compile "com.mod-buildcraft:buildcraft-api:7.99.15"
+    compile "appeng:appliedenergistics2:rv5-stable-8"
 }
 
 
