--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,9 @@ dependencies {
     deobfCompile "mezz.jei:jei_1.12.2:4.11.0.206"
     compile "com.mod-buildcraft:buildcraft-api:7.99.15"
     compile "appeng:appliedenergistics2:rv5-stable-8"
-    compile "codechicken:CodeChickenLib:1.12.2-3.1.8.341:deobf"
-	compile "codechicken:ForgeMultipart:1.12.2-2.4.2.58:deobf"
+    compile "codechicken:CodeChickenLib:1.12.2-3.2.1.350:deobf"
+	compile "codechicken:ForgeMultipart:1.12.2-2.5.0.70:deobf"
+    compile "codechicken:ChickenASM:1.12-1.0.2.9"
 }
 
 
